fixed spacing error in styles

--- a/toDo/src/style.css
+++ b/toDo/src/style.css
@@ -85,8 +85,10 @@ font-size: 8px;
    
 }
 .projectContainer{
-height: 20px;
+height: 30px;
 border: 1px solid black;
+display: flex;
+justify-content: center;
 }
 .projectTitle{
 font-size: 12px;
